--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                                         <input type="text" placeholder="1/10/2020" id="datetime" />
                                     </li>
                                     <li class="list-group-item">
-                                        <button id="filter-brn" type="button" class="btn btn-default">
+                                        <button id="filter-btn" type="button" class="btn btn-default">
                                             Filter Table
                                         </button>
                                     </li>
@@ -92,6 +92,9 @@
             </div>
         </div>
     </div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
+<script src="static/js/data.js"></script>
+<script src="static/js/app.js"></script>
 </body>
 
 </html>
