--- a/index1.html
+++ b/index1.html
@@ -55,22 +55,15 @@
                                 <p>Filter Search</p>
 
                                 <ul class= "bg-dark list-group">
-                                   <li class="list-group-item bg-dark">
-                                    <label for="city">Enter City</label>
-                                    <input type="text" placeholder= "fresno" id="city" />
-                                   </li>  
-                                   <li class="list-group-item bg-dark">
-                                    <label for="state">Enter State</label>
-                                    <input type="text" placeholder= "ca" id="state" />
-                                   </li>
-                                   <li class="list-group-item bg-dark">
-                                    <label for="country">Enter Country</label>
-                                    <input type="text" placeholder= "us" id="country" />
-                                   </li>
-                                   <li class="list-group-item bg-dark">
-                                    <label for="shape">Enter Shape</label>
-                                    <input type="text" placeholder= "oval" id="shape" />
-                                   </li>
+                                    <li class="bg-dark list-group-item">
+                                        <label for="date">Enter Date</label>
+                                        <input type="text" placeholder="1/10/2020" id="datetime" />
+                                    </li>
+                                    <li class="bg-dark list-group-item">
+                                        <button id="filter-btn" type="button" class="btn btn-default">
+                                            Filter Table
+                                        </button>
+                                    </li>
                                 </ul>
                             </form>
                         </div>
@@ -102,7 +95,7 @@
     </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
 <script src="static/js/data.js"></script>
-<script src="static/js/app.js"></script>
+<script src="static/js/app1.js"></script>
 </body>
 
 </html>
