--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>UFO finder</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
-    <link rel="stylesheet" href="static/css/style.css">
+    <link rel="stylesheet" href="Static/css/style.css">
 </head>
 
 <body class="bg-dark">
@@ -101,8 +101,8 @@
         </div>
     </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
-<script src="static/js/data.js"></script>
-<script src="static/js/app.js"></script>
+<script src="Static/js/data.js"></script>
+<script src="Static/js/app.js"></script>
 </body>
 
 </html>
